# python_package_manager_comparison_and_benchmark

./: Justfile  README.md
pdm/: Dockerfile  README.md  pyproject.toml
poetry/: Dockerfile  pyproject.toml
poetry/src/rye_with_uv/: hello_world.py
rye/: Dockerfile.pip  Dockerfile.uv  README.md  pyproject.toml
rye/src/rye_with_uv/: __init__.py
