[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Manuel Suarez <Manuel_Angel99@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
pandas= "^2.2.1"
matplotlib= "^3.8.4"
numpy= "^1.26.4"
pydantic= "^2.6.4"
pydantic-settings = "^2.2.1"
python-dotenv= "^1.0.1"
httpx= "^0.27.0"
openai= "^1.16.2"
fastapi= "^0.110.1"
uvicorn= "^0.29.0"
scipy= "^1.13.0"
alembic= "^1.13.1"
fastparquet= "^2024.2.0"
sqlalchemy = { extras = ["mypy"], version = "^2.0.29" }
redis = { extras = ["hiredis"], version = "^5.0.3" }
litellm= "^1.34.29"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
ruff = "^0.3.5"
pytest = "^8.1.1"
pyright = "^1.1.357"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
pandas-stubs = "^2.2.1.240316"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"