[project]
name = "rye-with-uv"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Manuel Suarez", email = "Manuel_Angel99@outlook.com" }
]
dependencies = [
    "pandas>=2.2.1",
    "matplotlib>=3.8.4",
    "numpy>=1.26.4",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "openai>=1.16.2",
    "fastapi>=0.110.1",
    "uvicorn>=0.29.0",
    "scipy>=1.13.0",
    "alembic>=1.13.1",
    "fastparquet>=2024.2.0",
    "sqlalchemy[mypy]>=2.0.29",
    "redis[hiredis]>=5.0.3",
    "litellm>=1.34.29",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
virtual = true
managed = true
dev-dependencies = [
    "pre-commit>=3.7.0",
    "ruff>=0.3.5",
    "pytest>=8.1.1",
    "pyright>=1.1.357",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pandas-stubs>=2.2.1.240316",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rye_with_uv"]
